# exchange_metadata

./: .gitignore  pyproject.toml
exchange_metadata/: exchange_map.json  get_exchange_metadata.py
exchange_metadata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
exchange_metadata_enricher.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_lookup.py
