[project]
name = "exchange_metadata"
version = "0.1.0"
description = "Lookup and enrich exchange metadata including timezone, trading hours, and location using MIC codes and aliases."
authors = [
    { name = "myabah", email = "myabah81@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
